UX61:C249 - Fix for text wrapping issue in recent items

--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -1005,6 +1005,10 @@ margin-bottom: 35px;
 .profile h3 {margin-bottom: 1em;}
 .profile .divided {border-top: none;}
 
+/*- Fixes for text wrapping in recent items ----------*/
+
+.recent-item {word-wrap: break-word;}
+
 
 /*- BUTTON AND LINK STYLES
 ----------------------------------------------------------------------*/
@@ -2106,22 +2110,10 @@ display: block;
 padding-top: 5px;
 line-height:1.4em;
 }
-
-.recent-item .posted a {
-  color:#2c87b7;
-}
-
-.recent-item a {
-  text-decoration:none;
-}
-
-.recent-item strong a {
-  text-decoration:underline;
-}
-
-.recent-item a:hover {
-  text-decoration:underline;
-}
+.recent-item .posted a {color: #2c87b7;}
+.recent-item a {text-decoration: none;}
+.recent-item strong a {text-decoration: underline;}
+.recent-item a:hover {text-decoration: underline;}
 .recent-item .offset-2, .recent-item .bd {
 background: #fff;
 border: 1px solid #e3e3e3;
